fix: Error that arose when data length was removed, custom messages in the pills cause overflow, now using flex to fix this
Jira Issue DD-1653

Sync to source repo @73cad53e1aa14339fd9253f61b6af61942398a54

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -252,14 +252,19 @@ div.dtsp-searchPane div.dataTables_scrollBody table tbody tr td.dtsp-nameColumn 
 }
 div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: flex-start;
+  align-items: flex-start;
 }
 div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont span.dtsp-name {
   text-overflow: ellipsis;
   overflow: hidden;
   display: inline-block;
-  width: calc(100% - 30px);
   vertical-align: middle;
   white-space: nowrap;
+  flex-grow: 1;
 }
 div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont span.badge {
   min-width: 30px;
